--- a/src/test/resources/org.omnifaces.test.taghandler.validatebean/resources/components/inputEntity.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.validatebean/resources/components/inputEntity.xhtml
@@ -25,9 +25,9 @@
 		<cc:attribute name="value" type="org.omnifaces.test.taghandler.validatebean.ValidateBeanITEntity" />
 	</cc:interface>
 	<cc:implementation>
-		<h:inputText id="number1" value="#{cc.attrs.value.number1}" />
+		<h:inputText id="number1" label="number1Label" value="#{cc.attrs.value.number1}" />
 		<h:message id="number1Message" for="number1" />
-		<h:inputText id="number2" value="#{cc.attrs.value.number2}" />
+		<h:inputText id="number2" label="number2Label" value="#{cc.attrs.value.number2}" />
 		<h:message id="number2Message" for="number2" />
 	</cc:implementation>
 </ui:component>
