--- a/src/test/resources/org.omnifaces.test.taghandler.validatebean/resources/components/inputEntity.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.validatebean/resources/components/inputEntity.xhtml
@@ -17,8 +17,8 @@
     xmlns:h="jakarta.faces.html"
     xmlns:h="jakarta.faces.facelets"
     xmlns:cc="jakarta.faces.composite"
-    xmlns:o="http://omnifaces.org/ui"
-    xmlns:of="http://omnifaces.org/functions"
+    xmlns:o="omnifaces.ui"
+    xmlns:of="omnifaces.functions"
 >
     <cc:interface>
         <cc:attribute name="value" type="org.omnifaces.test.taghandler.validatebean.ValidateBeanITEntity" />
