fix find'n'replace mistake on Facelets XML namespace

--- a/src/test/resources/org.omnifaces.test.taghandler.validatebean/resources/components/formEntity.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.validatebean/resources/components/formEntity.xhtml
@@ -15,7 +15,7 @@
 <ui:component
     xmlns:f="jakarta.faces.core"
     xmlns:h="jakarta.faces.html"
-    xmlns:h="jakarta.faces.facelets"
+    xmlns:ui="jakarta.faces.facelets"
     xmlns:cc="jakarta.faces.composite"
     xmlns:o="omnifaces.ui"
     xmlns:of="omnifaces.functions"
